<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="layout.MessageFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="@dimen/vertical_margin_10"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_description_size"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/vertical_margin_25"
        android:background="@drawable/border_event_description">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:background="@android:color/transparent"
            android:padding="@dimen/padding_15"
            android:hint="@string/enter_description"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/vertical_margin_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_wpp_message"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginEnd="@dimen/horizontal_margin_10"
            android:ems="5"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/send_wpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_10" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/vertical_margin_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_post_message"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginEnd="@dimen/horizontal_margin_10"
            android:ems="5"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/post_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_10" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/vertical_margin_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedin_post_message"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginEnd="@dimen/horizontal_margin_10"
            android:ems="5"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/post_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_10" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
