<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/title_person_dialog"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/vertical_margin_10"
        android:background="@android:color/holo_purple"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAllCaps="true" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/name_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_10"
        android:layout_marginBottom="@dimen/vertical_margin_10"
        android:layout_marginLeft="@dimen/vertical_margin_10"
        android:layout_marginRight="@dimen/vertical_margin_10"
        android:hint="@string/name"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin_10"
        android:layout_marginLeft="@dimen/vertical_margin_10"
        android:layout_marginRight="@dimen/vertical_margin_10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phone_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin_10"
        android:layout_marginLeft="@dimen/vertical_margin_10"
        android:layout_marginRight="@dimen/vertical_margin_10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="12"/>
</android.support.v7.widget.LinearLayoutCompat>